Upgrade jvm tool chain 21 -> 25 Upgrade gradle wrapper 8.14 -> 9.2.1 Fix Minecraft 26.1-snapshot-1 launch failed Optimize UI